# cppatrix

./: .gitignore  CMakeLists.txt  main.cpp  main.out  raylib.cpp  single.cpp  temp.cpp
.zed/: tasks.json
include/: functions.hpp  matrix.hpp  regression.hpp
main.out.dSYM/Contents/Resources/DWARF/: main.out
main.out.dSYM/Contents/Resources/Relocations/aarch64/: main.out.yml
sources/: functions.cpp  regression.cpp
